fix:修正 fillin_dfroute_subrouteuid 如果有多個 要在炸開

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,14 @@
     "    # 加入返回處理\n",
     "    onlyinroute = onlyinroute[~onlyinroute['RouteUID'].isin(routeuidlist_1)] #沒有routeUID 後續要處理的資料\n",
     "    route_common_df = pd.concat([route_common_df, ok_pairingroute])\n",
-    "    del ok_pairingroute\n",
+    "\n",
+    "    route_common_df = (\n",
+    "        route_common_df\n",
+    "        .assign(SubRouteUID=route_common_df['SubRouteUID'].str.split(','))\n",
+    "        .explode('SubRouteUID')\n",
+    "        .reset_index(drop=True)\n",
+    "    )\n",
+    "    \n",
     "\n",
     "    updatelog(\n",
     "        file=logfile,\n",
@@ -467,7 +474,7 @@
     "    else : \n",
     "        output = pd.concat([route_common_df, onlyinroute_severalsubrouteuid])\n",
     "\n",
-    "    return output.reindex(columns = routecolumns).sort_index()\n",
+    "    return output.reindex(columns = routecolumns).sort_index(), ok_pairingroute, seq_forpairing\n",
     "\n",
     "# 03 拆分路線\n",
     "\n",
@@ -639,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "1a747dcd",
    "metadata": {},
    "outputs": [
@@ -663,7 +670,7 @@
     "# df_seq = filter_by_keywords(df=df_seq, filtercolumn='SubRouteName_Zh', filterlist=['寵物'])\n",
     "\n",
     "updatelog(file = logfile, text = '[info]:更新目前沒有SubRouteUID的資料')\n",
-    "df_route = fillin_dfroute_subrouteuid(df_seq=df_seq, df_route=df_route, accurate=False).sort_index()\n",
+    "df_route,ok_pairingroute, seq_forpairing = fillin_dfroute_subrouteuid(df_seq=df_seq, df_route=df_route, accurate=True)\n",
     "\n",
     "updatelog(file = logfile, text = '[info]:計算出取交集的subrouteUID，以利進行路線拆解')\n",
     "in_both_subrouteUID = check_routes_and_save(df_route = df_route, \n",
@@ -674,438 +681,6 @@
     "gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f519955b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EncodedPolyline</th>\n",
-       "      <th>RouteUID</th>\n",
-       "      <th>RouteID</th>\n",
-       "      <th>RouteName_Zh</th>\n",
-       "      <th>RouteName_En</th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "      <th>SubRouteID</th>\n",
-       "      <th>SubRouteName_Zh</th>\n",
-       "      <th>SubRouteName_En</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>UpdateTime</th>\n",
-       "      <th>VersionID</th>\n",
-       "      <th>FilePath</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>q{owC_uodVtBw@@KsEwAi@mHWoA_@q@m@o@aAu@u@e@mCu...</td>\n",
-       "      <td>NWT10116</td>\n",
-       "      <td>10116</td>\n",
-       "      <td>242</td>\n",
-       "      <td>242</td>\n",
-       "      <td>NWT101160</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>242</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-21T12:47:37+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.49088 24.99017, 121.49116 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>onuwCaxbcV?s@JoBJuEA_BmBsEiAiCw@yAmAnA??i@n@e@...</td>\n",
-       "      <td>THB0968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>THB096801</td>\n",
-       "      <td>096801</td>\n",
-       "      <td>0968</td>\n",
-       "      <td>0968</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-27T01:26:18+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.26097 25.0188, 121.26123 25.01...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>i|owC}todViBl@sEa@_EEuCXaC^StJStGEhAMz@o@jBu@|...</td>\n",
-       "      <td>NWT10172</td>\n",
-       "      <td>10172</td>\n",
-       "      <td>243</td>\n",
-       "      <td>243</td>\n",
-       "      <td>NWT101720</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>243</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-21T12:47:37+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.49087 24.99029, 121.49064 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>gt_xC{`udVn@@L?X??tBAx@CpD?dCAX?F?~@?L?F?hA?@?...</td>\n",
-       "      <td>THB0968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>968</td>\n",
-       "      <td>THB096802</td>\n",
-       "      <td>096802</td>\n",
-       "      <td>0968</td>\n",
-       "      <td>0968</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-11-27T01:26:18+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.51838 25.07092, 121.51837 25.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>i|owC}todViBl@sEa@_EEuCXaC^StJStGEhAMz@o@jBu@|...</td>\n",
-       "      <td>NWT10172</td>\n",
-       "      <td>10172</td>\n",
-       "      <td>243</td>\n",
-       "      <td>243</td>\n",
-       "      <td>NWT159537</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>243寵物公車</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-21T12:47:37+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.49087 24.99029, 121.49064 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4929</th>\n",
-       "      <td>uckwCiuaeVWs@E_@@k@Jc@FWGa@A]O[IsBa@e@WuAAcBK]...</td>\n",
-       "      <td>TPE18040</td>\n",
-       "      <td>18040</td>\n",
-       "      <td>小10區</td>\n",
-       "      <td>S10Shuttle</td>\n",
-       "      <td>TPE159673</td>\n",
-       "      <td>159673.0</td>\n",
-       "      <td>小10區不經小天空步道</td>\n",
-       "      <td>S10Shuttle</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-11-21T13:07:41+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.58309 24.96587, 121.58335 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4942</th>\n",
-       "      <td>e_|wColfeVf@dJoDZS@eAiMLMrEi@FKkAaS}@cOu@oNjD\\...</td>\n",
-       "      <td>TPE18428</td>\n",
-       "      <td>18428</td>\n",
-       "      <td>通勤16</td>\n",
-       "      <td>CB16</td>\n",
-       "      <td>TPE161997</td>\n",
-       "      <td>161997.0</td>\n",
-       "      <td>通勤16不經南港展覽館去程</td>\n",
-       "      <td>CB16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-21T13:07:41+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.60728 25.05219, 121.60549 25.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4943</th>\n",
-       "      <td>gg{wCajgeVr@HFH@lABb@hA?L?ZEIu@Cm@@i@TOAi@B_@H...</td>\n",
-       "      <td>TPE18428</td>\n",
-       "      <td>18428</td>\n",
-       "      <td>通勤16</td>\n",
-       "      <td>CB16</td>\n",
-       "      <td>TPE161998</td>\n",
-       "      <td>161998.0</td>\n",
-       "      <td>通勤16不經南港展覽館返程</td>\n",
-       "      <td>CB16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-11-21T13:07:41+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.61201 25.04836, 121.61196 25.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4978</th>\n",
-       "      <td>apixCmnkdVnBLDDc@xJDXb@HZDxBZ`@Fd@F\\P`@`@b@n@n...</td>\n",
-       "      <td>TPE19717</td>\n",
-       "      <td>19717</td>\n",
-       "      <td>302區</td>\n",
-       "      <td>302Shuttle</td>\n",
-       "      <td>TPE162400</td>\n",
-       "      <td>162400.0</td>\n",
-       "      <td>302區狗狗公車</td>\n",
-       "      <td>302(Shuttle)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-11-21T13:07:41+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.46935 25.12145, 121.46928 25.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4979</th>\n",
-       "      <td>ordxCamtdVGm@~UcR^_AmCkEmEgHe@iCuBcOg@IkLlBMFc...</td>\n",
-       "      <td>TPE19717</td>\n",
-       "      <td>19717</td>\n",
-       "      <td>302區</td>\n",
-       "      <td>302Shuttle</td>\n",
-       "      <td>TPE162400</td>\n",
-       "      <td>162400.0</td>\n",
-       "      <td>302區狗狗公車</td>\n",
-       "      <td>302(Shuttle)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-11-21T13:07:41+08:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
-       "      <td>LINESTRING (121.51521 25.09624, 121.51544 25.0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5152 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        EncodedPolyline  RouteUID  RouteID  \\\n",
-       "0     q{owC_uodVtBw@@KsEwAi@mHWoA_@q@m@o@aAu@u@e@mCu...  NWT10116    10116   \n",
-       "0     onuwCaxbcV?s@JoBJuEA_BmBsEiAiCw@yAmAnA??i@n@e@...   THB0968      968   \n",
-       "0     i|owC}todViBl@sEa@_EEuCXaC^StJStGEhAMz@o@jBu@|...  NWT10172    10172   \n",
-       "1     gt_xC{`udVn@@L?X??tBAx@CpD?dCAX?F?~@?L?F?hA?@?...   THB0968      968   \n",
-       "1     i|owC}todViBl@sEa@_EEuCXaC^StJStGEhAMz@o@jBu@|...  NWT10172    10172   \n",
-       "...                                                 ...       ...      ...   \n",
-       "4929  uckwCiuaeVWs@E_@@k@Jc@FWGa@A]O[IsBa@e@WuAAcBK]...  TPE18040    18040   \n",
-       "4942  e_|wColfeVf@dJoDZS@eAiMLMrEi@FKkAaS}@cOu@oNjD\\...  TPE18428    18428   \n",
-       "4943  gg{wCajgeVr@HFH@lABb@hA?L?ZEIu@Cm@@i@TOAi@B_@H...  TPE18428    18428   \n",
-       "4978  apixCmnkdVnBLDDc@xJDXb@HZDxBZ`@Fd@F\\P`@`@b@n@n...  TPE19717    19717   \n",
-       "4979  ordxCamtdVGm@~UcR^_AmCkEmEgHe@iCuBcOg@IkLlBMFc...  TPE19717    19717   \n",
-       "\n",
-       "     RouteName_Zh RouteName_En SubRouteUID SubRouteID SubRouteName_Zh  \\\n",
-       "0             242          242   NWT101160        NaN             242   \n",
-       "0             968          968   THB096801     096801            0968   \n",
-       "0             243          243   NWT101720        NaN             243   \n",
-       "1             968          968   THB096802     096802            0968   \n",
-       "1             243          243   NWT159537        NaN         243寵物公車   \n",
-       "...           ...          ...         ...        ...             ...   \n",
-       "4929         小10區   S10Shuttle   TPE159673   159673.0     小10區不經小天空步道   \n",
-       "4942         通勤16         CB16   TPE161997   161997.0   通勤16不經南港展覽館去程   \n",
-       "4943         通勤16         CB16   TPE161998   161998.0   通勤16不經南港展覽館返程   \n",
-       "4978         302區   302Shuttle   TPE162400   162400.0        302區狗狗公車   \n",
-       "4979         302區   302Shuttle   TPE162400   162400.0        302區狗狗公車   \n",
-       "\n",
-       "     SubRouteName_En  Direction                 UpdateTime  VersionID  \\\n",
-       "0                NaN          0  2025-11-21T12:47:37+08:00          0   \n",
-       "0               0968          0  2025-11-27T01:26:18+08:00          0   \n",
-       "0                NaN          0  2025-11-21T12:47:37+08:00          0   \n",
-       "1               0968          1  2025-11-27T01:26:18+08:00          0   \n",
-       "1                NaN          0  2025-11-21T12:47:37+08:00          0   \n",
-       "...              ...        ...                        ...        ...   \n",
-       "4929      S10Shuttle          1  2025-11-21T13:07:41+08:00          0   \n",
-       "4942            CB16          0  2025-11-21T13:07:41+08:00          0   \n",
-       "4943            CB16          1  2025-11-21T13:07:41+08:00          0   \n",
-       "4978    302(Shuttle)          0  2025-11-21T13:07:41+08:00          0   \n",
-       "4979    302(Shuttle)          1  2025-11-21T13:07:41+08:00          0   \n",
-       "\n",
-       "                                               FilePath  \\\n",
-       "0     d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "0     d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "0     d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "1     d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "1     d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "...                                                 ...   \n",
-       "4929  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "4942  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "4943  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "4978  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "4979  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...   \n",
-       "\n",
-       "                                               geometry  \n",
-       "0     LINESTRING (121.49088 24.99017, 121.49116 24.9...  \n",
-       "0     LINESTRING (121.26097 25.0188, 121.26123 25.01...  \n",
-       "0     LINESTRING (121.49087 24.99029, 121.49064 24.9...  \n",
-       "1     LINESTRING (121.51838 25.07092, 121.51837 25.0...  \n",
-       "1     LINESTRING (121.49087 24.99029, 121.49064 24.9...  \n",
-       "...                                                 ...  \n",
-       "4929  LINESTRING (121.58309 24.96587, 121.58335 24.9...  \n",
-       "4942  LINESTRING (121.60728 25.05219, 121.60549 25.0...  \n",
-       "4943  LINESTRING (121.61201 25.04836, 121.61196 25.0...  \n",
-       "4978  LINESTRING (121.46935 25.12145, 121.46928 25.1...  \n",
-       "4979  LINESTRING (121.51521 25.09624, 121.51544 25.0...  \n",
-       "\n",
-       "[5152 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gdf_route"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "9fe96ae2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RouteUID</th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>NWT16578</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>NWT16578</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>NWT16676</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>NWT16677</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>NWT16678</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1495</th>\n",
-       "      <td>TPE16706</td>\n",
-       "      <td>TPE157798,TPE158475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1525</th>\n",
-       "      <td>TPE17560</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1527</th>\n",
-       "      <td>TPE17709</td>\n",
-       "      <td>TPE158892,TPE159523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1530</th>\n",
-       "      <td>TPE17740</td>\n",
-       "      <td>TPE159045,TPE159591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1532</th>\n",
-       "      <td>TPE17800</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>116 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      RouteUID          SubRouteUID\n",
-       "48    NWT16578                  NaN\n",
-       "49    NWT16578                  NaN\n",
-       "87    NWT16676                  NaN\n",
-       "93    NWT16677                  NaN\n",
-       "99    NWT16678                  NaN\n",
-       "...        ...                  ...\n",
-       "1495  TPE16706  TPE157798,TPE158475\n",
-       "1525  TPE17560                  NaN\n",
-       "1527  TPE17709  TPE158892,TPE159523\n",
-       "1530  TPE17740  TPE159045,TPE159591\n",
-       "1532  TPE17800                  NaN\n",
-       "\n",
-       "[116 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gdf_route[~gdf_route['SubRouteUID'].isin(in_both_subrouteUID)][['RouteUID','SubRouteUID']]"
    ]
   },
   {
