update : shp outputfolder

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -902,7 +902,7 @@
     "    segments_split(gdf_route, \n",
     "                   gdf_seq, \n",
     "                   in_both_subrouteUID,\n",
-    "                   outputfolder = create_folder(os.path.join(os.getcwd(), '..', '03處理後資料', '01_公車路線依站序拆分', 'temp_251209'))\n",
+    "                   outputfolder = create_folder(os.path.join(os.getcwd(), '..', '03處理後資料', '01_公車路線依站序拆分'))\n",
     "                    )\n",
     "    outputlog(logfile=logfile)\n",
     "    \n",
