fix: 新增輸出重新賦予SubRouteUID 的線形

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -714,12 +714,12 @@
     "\n",
     "            output.append({\n",
     "                'RouteUID' : stops.iloc[i]['RouteUID'],\n",
-    "                route_id_col: route_id,\n",
+    "                'SRouteUID': route_id,\n",
     "                'Direction': direction,\n",
     "                'StartSeq': stops.iloc[i][seq_seq_col],\n",
     "                'EndSeq': stops.iloc[i + 1][seq_seq_col],\n",
-    "                'Ori_SSeq' : stops.iloc[i]['Ori_seq'],\n",
-    "                'ori_ESeq' : stops.iloc[i + 1]['Ori_seq'],\n",
+    "                'StartOri' : stops.iloc[i]['Ori_seq'],\n",
+    "                'EndOri' : stops.iloc[i + 1]['Ori_seq'],\n",
     "                'geometry': segment\n",
     "            })\n",
     "\n",
@@ -842,7 +842,6 @@
     "        gdf_segment_routes_line.to_file(os.path.join(outputfolder, 'gdf_segment_routes.shp'))\n",
     "        updatelog(file = logfile, text = f'[info]: gdf_segment_routes 輸出成功')\n",
     "\n",
-    "\n",
     "def outputlog(logfile: str):\n",
     "    df_log = log_txt_to_dataframe(logfile)\n",
     "\n",
@@ -867,6 +866,9 @@
     "\n",
     "    updatelog(file = logfile, text = '[info]:更新目前沒有SubRouteUID的資料')\n",
     "    df_route,ok_pairingroute, seq_forpairing = fillin_dfroute_subrouteuid(df_seq=df_seq, df_route=df_route, accurate=True)\n",
+    "    df_route_outputpath = os.path.join(create_folder(os.path.join(os.path.getcwd(), '..', '03_處理後資料', '00_修正處理資料')) , '公車線形_更新SubRouteUID.shp')\n",
+    "    df_route.to_file(df_route_outputpath, index = False)\n",
+    "    updatelog(file = logfile, text = f'[info]:輸出更新SubRouteUID的公車線形於 {df_route_outputpath}')\n",
     "\n",
     "    updatelog(file = logfile, text = '[info]:計算出取交集的subrouteUID，以利進行路線拆解')\n",
     "    in_both_subrouteUID = check_routes_and_save(df_route = df_route, \n",
