--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -10,10 +10,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "23e79f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "已輸出檢查結果到：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\02_初步分析\\票證及路線數據檢查.txt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_19244\\573242192.py:865: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  temp['routeuid_subrouteuid_direction'] = (\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_19244\\573242192.py:875: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  temp['routeuid_subrouteuid_direction'] = (\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4616\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_19244\\573242192.py:809: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  gdf_snappoints.to_file(os.path.join(outputfolder, 'SnappedSequence.shp'))\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_Zh' to 'RouteName_'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_En' to 'RouteNam_1'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_Zh' to 'SubRouteNa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_En' to 'SubRoute_1'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'OperatorName_Zh' to 'OperatorNa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopName_Zh' to 'StopName_Z'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopName_En' to 'StopName_E'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopBoarding' to 'StopBoardi'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopSequence' to 'StopSequen'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'PositionLon' to 'PositionLo'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'PositionLat' to 'PositionLa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StationGroupID' to 'StationGro'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'LocationCityCode' to 'LocationCi'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_19244\\573242192.py:814: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  original_gdfseq.to_file(os.path.join(outputfolder, 'original_gdfseq.shp'))\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_Zh' to 'RouteName_'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_En' to 'RouteNam_1'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_Zh' to 'SubRouteNa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_En' to 'SubRoute_1'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'OperatorName_Zh' to 'OperatorNa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopName_Zh' to 'StopName_Z'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopName_En' to 'StopName_E'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopBoarding' to 'StopBoardi'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StopSequence' to 'StopSequen'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'PositionLon' to 'PositionLo'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'PositionLat' to 'PositionLa'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'StationGroupID' to 'StationGro'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'LocationCityCode' to 'LocationCi'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_19244\\573242192.py:819: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  original_gdfroute.to_file(os.path.join(outputfolder, 'original_gdfroute.shp'))\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
+      "  ogr_write(\n"
+     ]
+    }
+   ],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import pandas as pd\n",
@@ -866,8 +969,8 @@
     "\n",
     "    updatelog(file = logfile, text = '[info]:更新目前沒有SubRouteUID的資料')\n",
     "    df_route,ok_pairingroute, seq_forpairing = fillin_dfroute_subrouteuid(df_seq=df_seq, df_route=df_route, accurate=True)\n",
-    "    df_route_outputpath = os.path.join(create_folder(os.path.join(os.path.getcwd(), '..', '03_處理後資料', '00_修正處理資料')) , '公車線形_更新SubRouteUID.shp')\n",
-    "    df_route.to_file(df_route_outputpath, index = False)\n",
+    "    df_route_outputpath = os.path.join(create_folder(os.path.join(os.getcwd(), '..', '03_處理後資料', '00_修正處理資料')) , '公車線形_更新SubRouteUID.xlsx')\n",
+    "    df_route.to_excel(df_route_outputpath, index = False)\n",
     "    updatelog(file = logfile, text = f'[info]:輸出更新SubRouteUID的公車線形於 {df_route_outputpath}')\n",
     "\n",
     "    updatelog(file = logfile, text = '[info]:計算出取交集的subrouteUID，以利進行路線拆解')\n",
